--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "back-for-seconds",
+  "name": "frontend",
   "version": "1.0.0",
   "description": "Capstone project for Epicode full-stack developer course",
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "client": "npm run dev --prefix frontend",
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js"
   },
