--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "client": "npm run dev --prefix frontend",
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js"
@@ -27,6 +28,7 @@
     "mongoose": "^7.4.1"
   },
   "devDependencies": {
+    "concurrently": "^8.2.0",
     "nodemon": "^3.0.1"
   }
 }
